--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
+    "request": "^2.88.2",
     "validator": "^13.7.0"
   }
 }
